public class AnimStateList
{
    #region Worker Animation States
    public const string IS_MOVING_HORIZONTAL_WORKER = "isHorizontal";
    public const string IS_MOVING_UP_WORKER = "isUp";
    public const string IS_MOVING_DOWN_WORKER = "isDown";
    public const string IS_IDLE_WORKER = "isIdle";
    #endregion

    #region Melee Animation States
    public const string IS_MOVING_RIGHT_MELEE = "isMovingRight";
    public const string IS_MOVING_LEFT_MELEE = "isMovingLeft";
    public const string IS_MOVING_UP_MELEE = "isMovingUp";
    public const string IS_MOVING_DOWN_MELEE = "isMovingDown";
    public const string IS_IDLE_MELEE = "isIdle";
    #endregion

    #region Ranged Animation States
    public const string IS_MOVING_RIGHT_RANGED = "isMovingRight";
    public const string IS_MOVING_LEFT_RANGED = "isMovingLeft";
    public const string IS_MOVING_UP_RANGED = "isMovingUp";
    public const string IS_MOVING_DOWN_RANGED = "isMovingDown";
    public const string IS_IDLE_RANGED = "isIdle";
    #endregion

    #region Enemy Melee Animation States
    public const string IS_MOVING_RIGHT_ENEMY_MELEE = "isMovingRight";
    public const string IS_MOVING_LEFT_ENEMY_MELEE = "isMovingLeft";
    public const string IS_MOVING_UP_ENEMY_MELEE = "isMovingUp";
    public const string IS_MOVING_DOWN_ENEMY_MELEE = "isMovingDown";
    public const string IS_IDLE_ENEMY_MELEE = "isIdle";
    #endregion

    #region Enemy Ranged Animation States
    public const string IS_MOVING_RIGHT_ENEMY_RANGED = "isMovingRight";
    public const string IS_MOVING_LEFT_ENEMY_RANGED = "isMovingLeft";
    public const string IS_MOVING_UP_ENEMY_RANGED = "isMovingUp";
    public const string IS_MOVING_DOWN_ENEMY_RANGED = "isMovingDown";
    public const string IS_IDLE_ENEMY_RANGED = "isIdle";
    #endregion
}
